Update documentation in README
Signed-off-by: solonovamax <solonovamax@12oclockpoint.com>